Update SDK with latest spec changes
