# models/all.ts
@@ -65,6 +65,7 @@ export * from "./MessageDeliveryWebhook";
 export * from "./MessageDirection";
 export * from "./MessageRequest";
 export * from "./MessageResult";
+export * from "./MessageResultAllOfTfn";
 export * from "./MessageStatus";
 export * from "./MessageStatusWebhook";
 export * from "./MessagesList";
@@ -124,6 +125,7 @@ export * from "./SetTalk";
 export * from "./Sms";
 export * from "./StartRecordCall";
 export * from "./TFN";
+export * from "./TFNCampaign";
 export * from "./TerminateConference";
 export * from "./TranscribeReason";
 export * from "./TranscribeTermReason";
