# types/ObservableAPI.ts
@@ -70,6 +70,7 @@ import { MessageDeliveryWebhook } from "../models/MessageDeliveryWebhook";
 import { MessageDirection } from "../models/MessageDirection";
 import { MessageRequest } from "../models/MessageRequest";
 import { MessageResult } from "../models/MessageResult";
+import { MessageResultAllOfTfn } from "../models/MessageResultAllOfTfn";
 import { MessageStatus } from "../models/MessageStatus";
 import { MessageStatusWebhook } from "../models/MessageStatusWebhook";
 import { MessagesList } from "../models/MessagesList";
@@ -129,6 +130,7 @@ import { SetTalk } from "../models/SetTalk";
 import { Sms } from "../models/Sms";
 import { StartRecordCall } from "../models/StartRecordCall";
 import { TFN } from "../models/TFN";
+import { TFNCampaign } from "../models/TFNCampaign";
 import { TerminateConference } from "../models/TerminateConference";
 import { TranscribeReason } from "../models/TranscribeReason";
 import { TranscribeTermReason } from "../models/TranscribeTermReason";
